b=811730 - Take skip into account when copying video frames into shared memory. r=cpeterson