gfx/layers/ipc/ShmemYCbCrImage.cpp
@@ -150,25 +150,54 @@ bool ShmemYCbCrImage::IsValid()
   return true;
 }
 
-bool ShmemYCbCrImage::CopyData(uint8_t* aYData, uint8_t* aCbData, uint8_t* aCrData,
+static void CopyLineWithSkip(const uint8_t* src, uint8_t* dst, uint32_t len, uint32_t skip) {
+  for (uint32_t i = 0; i < len; ++i) {
+    *dst = *src;
+    src += 1 + skip;
+    ++dst;
+  }
+}
+
+bool ShmemYCbCrImage::CopyData(const uint8_t* aYData,
+                               const uint8_t* aCbData, const uint8_t* aCrData,
                                gfxIntSize aYSize, uint32_t aYStride,
-                               gfxIntSize aCbCrSize, uint32_t aCbCrStride)
+                               gfxIntSize aCbCrSize, uint32_t aCbCrStride,
+                               uint32_t aYSkip, uint32_t aCbCrSkip)
 {
   if (!IsValid() || GetYSize() != aYSize || GetCbCrSize() != aCbCrSize) {
     return false;
   }
-  for (int i = 0; i < aYSize.height; i++) {
-    memcpy(GetYData() + i * GetYStride(),
-           aYData + i * aYStride,
-           aYSize.width);
+  for (int i = 0; i < aYSize.height; ++i) {
+    if (aYSkip == 0) {
+      // fast path
+      memcpy(GetYData() + i * GetYStride(),
+             aYData + i * aYStride,
+             aYSize.width);
+    } else {
+      // slower path
+      CopyLineWithSkip(aYData + i * aYStride,
+                       GetYData() + i * GetYStride(),
+                       aYSize.width, aYSkip);
+    }
   }
-  for (int i = 0; i < aCbCrSize.height; i++) {
-    memcpy(GetCbData() + i * GetCbCrStride(),
-           aCbData + i * aCbCrStride,
-           aCbCrSize.width);
-    memcpy(GetCrData() + i * GetCbCrStride(),
-           aCrData + i * aCbCrStride,
-           aCbCrSize.width);
+  for (int i = 0; i < aCbCrSize.height; ++i) {
+    if (aCbCrSkip == 0) {
+      // fast path
+      memcpy(GetCbData() + i * GetCbCrStride(),
+             aCbData + i * aCbCrStride,
+             aCbCrSize.width);
+      memcpy(GetCrData() + i * GetCbCrStride(),
+             aCrData + i * aCbCrStride,
+             aCbCrSize.width);
+    } else {
+      // slower path
+      CopyLineWithSkip(aCbData + i * aCbCrStride,
+                       GetCbData() + i * GetCbCrStride(),
+                       aCbCrSize.width, aCbCrSkip);
+      CopyLineWithSkip(aCrData + i * aCbCrStride,
+                       GetCrData() + i * GetCbCrStride(),
+                       aCbCrSize.width, aCbCrSkip);
+    }
   }
   return true;
 }
